2007-01-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (checkdevtype):
	New discovery parameter: CiscoIOS::enable-vlan-interfaces
	(discover): added Cisco BGP statistics

2006-12-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/JunOS.pm:
	New discovery module for Juniper 

2006-12-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm (discover):
	New discovery parameter: CiscoIOS_MacAccounting::tokenset-members

2006-12-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	New discovery parameter:
	RFC2863_IF_MIB::exclude-down-interfaces

	* bin/configinfo.in: Added the tree compilation timestamp

2006-12-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm:
	SNMP mapping lookups are now asynchronous.
	PDUs are rescheduled with delays
	Not compatible with old cbQos olugin, needs tp-cisco-cbqos-1.4d

2006-11-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: new SNMP parameters:
	  snmp-localaddr and snmp-localport


2006-11-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm:
	New discovery parameter:
	CiscoIOS_MacAccounting::external-serviceid

2006-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	new discovery parameters:
	RFC2863_IF_MIB::bandwidth-usage
	RFC2863_IF_MIB::bandwidth-limits

2006-10-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/ConfigTree.pm (new): exclusivity lock:
	only one compiler can run for a tree

2006-09-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/generic/rfc2863.if-mib.xml: added an overvew shortcut
	for interface errors
